<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:onClick="rattingStar"
        android:icon="@drawable/list"
        android:title="@string/list"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/wallet"
        android:title="@string/pay"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/message"
        android:title="@string/message"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/profile"/>
</menu>